<resources>
    <string name="app_name">智慧門卡模擬器</string>
    
    <!-- Button Labels -->
    <string name="scan_card">掃描門卡</string>
    <string name="emulate_card">啟動模擬</string>
    <string name="emulation_active">模擬已啟動</string>

    <!-- UI Status & Info -->
    <string name="card_uid">已存卡片 UID: %1$s</string>
    <string name="no_card_saved">尚未儲存任何卡片</string>
    <string name="place_card_message">請將門卡貼近手機背面以掃描</string>
    <string name="emulating_message">模擬已啟動，請將手機貼近讀卡機</string>
    
    <!-- Toast & Prompt Messages -->
    <string name="card_saved">卡片已儲存！ UID: %1$s</string>
    <string name="emulation_started">卡片模擬已啟動</string>
    <string name="emulation_stopped">卡片模擬已停止</string>
    <string name="nfc_not_enabled">請在系統設定中開啟 NFC 功能</string>
    <string name="nfc_not_supported">很抱歉，您的裝置不支援 NFC</string>
    <string name="scan_prompt">準備掃描，請將卡片貼近手機</string>
    <string name="set_as_default_prompt">請在 NFC 設定中，將本 App 設為預設付款方式以啟動模擬</string>
</resources> 